# DecoderGPU

./: CMakeLists.txt  MP4Encoder.cpp.test  MP4Encoder.h.test  Multiple_Decoder.sh  NPPJpegCoder.cpp  NPPJpegCoder.h  main.cpp
NvEncoder/NvEncoder/: NvEncoderCuda.cpp  NvEncoderCuda.h
